force-app/main/default/objects/PH_Query__c/PH_Query__c.object-meta.xml
<CustomObject>
    <label>Profiler Query</label>
    <pluralLabel>Profiler Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Query Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>