force-app/main/default/objects/PH_Query__c/fields/Duration_Ms__c.field-meta.xml
<CustomField>
    <fullName>Duration_Ms__c</fullName>
    <label>Duration (ms)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>