force-app/main/default/objects/PH_Query__c/fields/Fingerprint__c.field-meta.xml
<CustomField>
    <fullName>Fingerprint__c</fullName>
    <label>Fingerprint</label>
    <type>TextArea</type>
</CustomField>