force-app/main/default/objects/PH_Query__c/fields/Rows__c.field-meta.xml
<CustomField>
    <fullName>Rows__c</fullName>
    <label>Rows</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>