force-app/main/default/objects/PH_Query__c/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <label>SObject</label>
    <type>Text</type>
    <length>80</length>
</CustomField>