force-app/main/default/objects/PH_Query__c/fields/Soql_Text__c.field-meta.xml
<CustomField>
    <fullName>Soql_Text__c</fullName>
    <label>SOQL Text</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>