force-app/main/default/objects/PH_Query__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <label>Transaction</label>
    <type>Lookup</type>
    <referenceTo>PH_Transaction__c</referenceTo>
    <relationshipLabel>Queries</relationshipLabel>
    <relationshipName>Queries</relationshipName>
    <required>true</required>
</CustomField>